--- a/src/tailwind/root.css
+++ b/src/tailwind/root.css
@@ -14,16 +14,17 @@ body {
 }
 
 .form__input__valid {
-  background: url(../images/check.jpg);
+  background: url(../images/check.png);
   background-size: 10%;
   background-repeat: no-repeat;
   background-position: right 5% bottom 50%;
 }
 
 .form__input__invalid {
-    background: url(../images/cross.jpg);
+    background: url(../images/cross.png);
     background-size: 10%;
     background-repeat: no-repeat;
     background-position: right 5% bottom 50%;
+    background-color: #F08080;
   }
   
